--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "autogluon>=1.1.1",
     "dvc>=3.56.0",
     "imbalanced-learn>=0.12.4",
+    "jupyter>=1.1.1",
     "polars>=1.14.0",
     "ray[data,serve,train,tune]>=2.10.0",
 ]
