--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "dvc>=3.56.0",
     "imbalanced-learn>=0.12.4",
     "jupyter>=1.1.1",
+    "plotly-resampler>=0.10.0",
     "polars>=1.14.0",
     "ray[data,serve,train,tune]>=2.10.0",
 ]
