--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ dependencies = [
     "autogluon>=1.1.1",
     "dvc>=3.56.0",
     "imbalanced-learn>=0.12.4",
+    "ipykernel>=6.29.5",
     "jupyter>=1.1.1",
+    "nbformat>=5.10.4",
     "plotly-resampler>=0.10.0",
     "polars>=1.14.0",
     "ray[data,serve,train,tune]>=2.10.0",
